Spacing and border fixes

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -39,6 +39,7 @@ footer {
     color: $color;
     text-decoration: none;
     padding: 1.5rem 2.5rem;
+    border: none;
     border-radius: 10px;
     box-shadow: #222222aa 0px 2px 5px;
 
@@ -142,7 +143,7 @@ footer {
  *  SKILLS
  */
 
- #skills h3 {
+#skills h3 {
     font-size: 2rem;
     margin: 0 0 2rem 0;
 }
@@ -173,6 +174,7 @@ footer {
 .skill-icon {
     width: 6rem;
     margin-bottom: 0.5rem;
+    user-select: none;
     filter: color.$filter-white; // Override the color of the SVG
 }
 
@@ -180,6 +182,7 @@ footer {
     font-weight: bold;
     font-size: 1.5rem;
     width: 8rem;
+    cursor: default;
 }
 
 
@@ -384,6 +387,10 @@ footer {
         margin-bottom: 5rem;
     }
 
+    .mockup-container {
+        margin-right: 0;
+    }
+
     .mockup-img {
         margin-bottom: -20px;
     }
@@ -532,11 +539,13 @@ footer {
     #contact h2 {
         font-size: 2.75rem;
     }
+
     #contact-form {
         label {
             font-size: 1.5rem;
         }
     }
+
     #contact-email {
         height: 3.5rem;
     }
@@ -566,7 +575,6 @@ footer {
         transition: all 0.25s ease 0s;
 
         display: flex;
-        
 
         i {
             font-size: 2rem;
